imports/plugins/included/default-theme/client/styles/dashboard/orders.less
/* ... */
.rollover-checkbox {
    &.order-invoice-rollover {
      .selected-checkbox {
        padding-right: 6px;
        padding-left: 17px;
        padding-top: 5px;

        .checkbox-avatar {
          margin-left: -6px;
          border-radius: 2px;
          border: solid 2px #5e6264;
          background: transparent;
        }
      }

      .second-child {
        padding-right: 6px;
        padding-left: 17px;
        padding-top: 5px;

        .checkbox-avatar {
          margin-left: -6px;
          border-radius: 2px;
          border: solid 2px #5e6264;
        }
      }
    }
  }
// Order Table Styles
.rui.order.table {
  border-top: none;
  width: auto;

  @media only screen and (max-width: 740px) {
      max-width: 100%;
      > div {
        margin: 0 auto;
      }
  }

  @media screen and (max-width: 745px) and (min-width: 710px) {
    div[data-radium] {
      display: none;
    }
  }

  // Table Headers
  .order-table-header-name {
    border-right: none;
    .text-align(left);
    padding-top: 8px;

    min-width: 20%;
    max-width: 100%;
  }
  .order-table-header-email {
    border-right: none;
    text-align: center;
    padding-top: 19px;

    min-width: 15%;
    max-width: 100%;
  }
  .order-table-header-date {
    border-right: none;
    text-align: center;
    padding-top: 19px;

    min-width: 10%;
    max-width: 100%;
  }
  .order-table-header-id {
    border-right: none;
    text-align: center;
    padding-top: 19px;

    min-width: 5%;
    max-width: 50%;
  }
  .order-table-header-total {
    border-right: none;
    text-align: center;
    padding-top: 19px;

    min-width: 15%;
    max-width: 50%;
  }
  .order-table-header-shipping {
    border-right: none;
    text-align: center;
    padding-top: 19px;

    min-width: 15%;
    max-width: 100%;
  }
  .order-table-header-status {
    border-right: none;
    text-align: center;
    padding-top: 19px;

    min-width: 15%;
    max-width: 100%;

  }

  .order-table-header-control {
    min-width: 5%;
    max-width: 50%;
  }

  // Table Columns
  .order-table-column-name {
    border-right: 1px solid @black10;

    min-width: 20%;
    max-width: 100%;
  }
  .order-table-column-email {
    text-align: center;
    min-width: 15%;
    max-width: 100%;
  }
  .order-table-column-date {
    text-align: center;

    min-width: 10%;
    max-width: 100%;
  }
  .order-table-column-id {
    text-align: center;

    min-width: 5%;
    max-width: 50%;
  }
  .order-table-column-total {
    text-align: center;

    min-width: 15%;
    max-width: 50%;
  }
  .order-table-column-shipping {
    text-align: center;
    margin-top: 2px;

    min-width: 15%;
    max-width: 100%;
  }
  .order-table-column-status {
    text-align: center;
    margin-top: 2px;

    min-width: 15%;
    max-width: 100%;
  }

  .order-table-column-control {
    .display(flex);
    .flex-direction(column);
    // height: 100%;
    padding: 0;
    height: 49px;
    min-width: 5%;
    max-width: 50%;
    button {
      flex: 1 1 auto;
      border-radius: 0;
      height: 100%;
      width: 100%;
      background-color: transparent;
    }
  }

  .order-table-column-control .btn-success {
    .btn-success();
    border-radius: 0;
  }

  // Name cell display
  .order-table-name-cell {
    display: inline-flex;
    .padding-left(5px);
  }

  // Checkbox Styling
  .order-header-checkbox {
    margin-top: 10px;
    margin-bottom: 0px;
    .margin-right(10px);
    border-radius: 2px;
    border: solid 2px @black65;
  }

  .column-name-name {
    margin-top: 10;
  }

  .order-table-pagination-visible {
    border-top: none;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  .order-table-thead {
    // border-top: 1px solid @black10;
    // border-right: 1px solid @black10;
    border-left: 1px solid @black10;
  }

  .order-table-details-tr-group {
    border-right: none;
    border-left: none;
    border-bottom: none;
  }

  .rt-tr.order-table-detail-tr:hover {
    background: transparent
  }

  .order-table-tr-group {
    // border-right: 1px solid @black10;
    border-left: 1px solid @black10;
  }

  .order-table-list {
    border-bottom: 1px solid @black10;
    border-top: 1px solid @black10;
    border-left: 1px solid @black10;
    border-right: 1px solid @black10;
    .rt-thead{
      border-bottom: none;
      .rt-th{
        border-bottom: 1px solid #e6e6e6;        
      }
    }
  }

  .order-table-detail {
    border-bottom: none;
  }

  .rt-tbody {
    .rt-tr.selected-row {
      background-color: #e8fcf6;
    }
  }

  .rt-noData {
      top: 75%
  }
}

.rtl .rui.order.table {
  .order-table-column-name {
  border-left: 1px solid @black10;
  border-right: none;
  }
}

.rollover-checkbox {

  .second-child {
    padding-right: 6px;

    .checkbox-avatar {
      margin-left: -6px;
      border-radius: 2px;
      border: solid 2px @black65;
    }
  }
}

.all-checkboxes {
  padding-right: 6px;

  .checkbox-avatar {
    margin-left: 4px;
    border-radius: 2px;
    border: solid 2px @black65;
    background: transparent;
  }
}

strong.orders-full-name {
  margin-top: 7px;
  .padding-left(5px);
}

.rui.order.table.table-header-hidden {
  .rt-thead {
    border-bottom: none;

    .rt-tr {
      display: none;
    }
  }
}

.rui.order.table.table-header-visible {
  .rt-thead {
    .rt-tr {
      height: 56px;
    }
  }
}

.order-toggle-btn, .badge-basic.orders-badge {
  background: transparent;
}
/* ... */

